--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Introduction to Spatial Data Analysis in R</title>
+    <title>Introduction to spatial data analysis in R</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Adithi R Upadhya, Meenakshi Kushwaha, and Pratyush Agrawal" />
+    <meta name="author" content="Adithi R Upadhya" />
     <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -12,11 +12,10 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Introduction to Spatial Data Analysis in R
-## useR! 2022
-### Adithi R Upadhya, Meenakshi Kushwaha, and Pratyush Agrawal
-### ILK Labs
-### 20th June 2022
+# Introduction to spatial data analysis in R
+## R Ladies Bangalore
+### Adithi R Upadhya
+### 3rd July 2022
 
 ---
 
@@ -24,9 +23,9 @@ class:middle, center
 
 # Hi, Logistics alert
 
-## [GitHub](https://github.com/adithirgis/user_2022_tutorial)
-## [Slides](https://user2022tutorial.netlify.app/)
-## [Read Me / Notes / Questions](https://docs.google.com/document/d/1OZUgLioKxihOVatHHnrFTNQn5ySHwKEfYhZGZuHxf9w/edit#heading=h.inqydmvlzlfh) 
+## [GitHub](https://github.com/adithirgis/r_ladies_bangalore_spatial_analysis)
+## [Slides](https://rladies-bangalore-spatial-analysis.netlify.app/)
+## [Read Me / Notes / Questions](https://docs.google.com/document/d/1_ZK-YTNfnc2LyUnFPkjDljmlYrloW4drF69Uz_uWzA0/edit) 
 
 ### We will start in 5 minutes.
 
@@ -249,7 +248,6 @@ background-size: contain
 #R packages
 ###sf
 ###raster
-###stars
 
 ---
 
@@ -284,25 +282,6 @@ Use the sf package for simpler spatial data analysis with geometries that stick 
 
 ---
 
-# Geometry types
-
-`POINT`: a single point
-
-`MULTIPOINT`: multiple points
-
-`LINESTRING`: sequence of two or more points connected by straight lines
-
-`MULTILINESTRING`: multiple lines
-
-`POLYGON`: a closed ring with zero or more interior holes
-
-`MULTIPOLYGON`: multiple polygons
-
-`GEOMETRYCOLLECTION`: any combination of the above types
-
-
----
-
 # Advantages of `sf`
 
 Is treated as a `data.frame` 
@@ -320,7 +299,6 @@ Can be linked directly to the `GDAL`, `GEOS`, and `PROJ` libraries that provide 
 library(sf)
 library(raster)
 library(tidyverse)
-library(stars)
 library(leaflet)
 library(ggplot2)
 library(ggspatial)
@@ -548,15 +526,6 @@ st_distance(data_sf_projected[c(1), ], data_sf_projected[c(5), ])
 
 ---
 
-# `st_area`
-
-Returns the area of a geometry, in the coordinate reference system used; in case x is in degrees longitude/latitude, `st_geod_area` is used for area calculation.
-
-Here we will use projected data to calculate area. 
-
-
----
-
 class: inverse, center, middle
 background-image: url(https://cdn.dribbble.com/users/1002383/screenshots/4252960/v13.gif)
 background-size: contain
@@ -733,8 +702,6 @@ You can change these settings by providing additional arguments such as `xmn`, `
 
 ```r
 temp &lt;- raster("data/Ban_Temp_Mar2022.tif")
-
-y &lt;- raster(ncol = 36, nrow = 18, xmn = -1000, xmx = 1000, ymn = -100, ymx = 900)
 ```
 
 ---
@@ -746,8 +713,6 @@ class:middle, center
 ---
 
 # Summary and Resolution
-
-`aggregate` - aggregates a Raster object to create a new RasterLayer or RasterBrick with a lower resolution (larger cells). 
 
 
 ```r
@@ -781,28 +746,6 @@ res(temp_agg)
 ## [1] 0.2000009 0.2000009
 ```
 
-```r
-res(y)
-```
-
-```
-## [1] 55.55556 55.55556
-```
-
-```r
-summary(y)
-```
-
-```
-##         layer
-## Min.       NA
-## 1st Qu.    NA
-## Median     NA
-## 3rd Qu.    NA
-## Max.       NA
-## NA's       NA
-```
-
 ---
 
 # `projectRaster`
@@ -811,25 +754,7 @@ To transform a `RasterLayer` to another coordinate reference system (projection)
 
 
 ```r
-# To transform 
 temp_proj &lt;- projectRaster(temp, crs = "+proj=utm +zone=43 +datum=WGS84")
-
-# To set the coordinate system 
-projection(y) &lt;- "+proj=utm +zone=48 +datum=WGS84"
-y
-```
-
-```
-## class      : RasterLayer 
-## dimensions : 18, 36, 648  (nrow, ncol, ncell)
-## resolution : 55.55556, 55.55556  (x, y)
-## extent     : -1000, 1000, -100, 900  (xmin, xmax, ymin, ymax)
-## crs        : +proj=utm +zone=48 +datum=WGS84 +units=m +no_defs
-```
-
-```r
-# To transform
-y_prof &lt;- projectRaster(y, crs = "+proj=longlat +datum=WGS84 +no_defs")
 ```
 
 
@@ -853,24 +778,6 @@ cellStats(temp, mean)
 ```
 ## [1] 298.7602
 ```
-
----
-
-# Raster algebra 
-
-When used with a raster object as first argument, normal summary statistics functions such as `min`, `max`, and `mean` return a `RasterLayer` (usually for multiple layers). 
-
-
-```r
-r1 &lt;- temp
-r2 &lt;- r1
-
-s &lt;- stack(r1, r2)
-plot(max(s, na.rm = TRUE))
-```
-
-![](index_files/figure-html/unnamed-chunk-18-1.png)&lt;!-- --&gt;
-
 
 ---
 
@@ -900,68 +807,6 @@ data_sf_subset &lt;- data_sf[1, ]
 
 data_sf_buffer &lt;- st_buffer(data_sf_subset, dist = 5000) 
 masked_raster &lt;- mask(x = temp, mask = data_sf_buffer)
-```
-
----
-
-class:middle, center
-
-# Demo
-
----
-
-# Raster operation 
-
-Returns a geographic subset of an object as specified by an Extent object (or object from which an extent object can be extracted/created)
-
----
-# Calculate area
-
-- Computes the approximate surface area of cells in an unprojected (longitude/latitude) `raster` object
-- returns all values or the values for a number of rows of a `raster` object. Values returned for a `RasterLayer` are a vector
-
-
-```r
-sum(getValues(area(temp_proj)))
-```
-
-```
-## [1] 21818160000
-```
-
----
-
-class: middle, center
-
-# Demo
-
----
-
-
-# Rasterize using `stars` package
-
-
-```r
-raster_data &lt;- st_rasterize(data_sf)
-```
-
----
-
-class:middle, center
-
-# Demo
-
----
-
-# Vectorize using `stars` 
- 
-
-```r
-tif &lt;- read_stars("data/Ban_Temp_Mar2022.tif")
-summary(tif)
-class(tif)
-# Convert a foreign object to sf
-temp_sf &lt;- st_as_sf(tif, as_points = TRUE)
 ```
 
 ---
@@ -1036,16 +881,6 @@ class:middle, center
 
 ---
 
-# Sometimes.. 
-
-- Making maps in R is not always easy.
-- It is slow.
-- Map transformations can be a problem. 
-- Adding annotations can be tedious. 
-
-
----
-
 # Resources used
 
 https://bookdown.org/nicohahn/making_maps_with_r5/docs/ggplot2.html#using-ggplot2-to-create-maps
@@ -1074,13 +909,7 @@ Images from [rawpixel](https://www.rawpixel.com/)
 
 
 - [Adithi R Upadhya](https://adithirugis.rbind.io/)
-- [Meenakshi Kushwaha](https://meenakshi.rbind.io/) 
-- [Pratyush Agrawal](https://twitter.com/Pratyushagraw97) 
 
----
-class:middle, center
-
-# Excersise - 20 minutes
 
 ---
 class:middle, center
