--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ class: center, middle, inverse, title-slide
 # Introduction to spatial data analysis in R
 ## R Ladies Bangalore
 ### Adithi R Upadhya
-### 3rd July 2022
+### July 2022
 
 ---
 
